<resources>
    <string name="app_name">掌上和山</string>
    <string name="nav_lessons">课程</string>
    <string name="nav_tasks">计划</string>
    <string name="nav_communication">发现</string>
    <string name="nav_mine">我的</string>
    <string name="nav_nameHint">未登录</string>
    <string name="nav_mottoHint">请先登录后再操作</string>
    <string name="toolbar_addLessons">添加课程</string>
    <string name="toolbar_editLessons">编辑课程</string>
    <string name="toolbar_deleteLessons">删除课程</string>
    <string name="week_1">周一</string>
    <string name="week_2">周二</string>
    <string name="week_3">周三</string>
    <string name="week_4">周四</string>
    <string name="week_5">周五</string>
    <string name="week_6">周六</string>
    <string name="week_7">周日</string>
    <string name="hint_login_username">请输入手机号</string>
    <string name="hint_login_password">请输入密码</string>
    <string name="hint_login_smsCode">请输入5位验证码</string>
    <string name="hint_search_template">请输入关键字</string>
    <string name="login_btn">登录</string>
    <string name="login_getsms_btn">获取验证码</string>
    <string name="login_use_sms">使用手机短信登录</string>
    <string name="login_use_pass">使用账号密码登录</string>
    <string name="userInfo_title">我的信息</string>
    <string name="userInfo_edit">编辑资料</string>
    <string name="menu_save">保存</string>
    <string name="menu_setting">设置</string>
    <string name="setting_updateUserInfo">编辑资料</string>
    <string name="setting_logout">退出登录</string>
    <string name="block_base_info">基本信息</string>
    <string name="block_real_info">实名信息</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>