<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_smsLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.SmsLoginFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_loginByPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/login_use_pass" />


            <ImageView
                android:id="@+id/image_logo"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"

                app:srcCompat="@drawable/ic_logo" />

            <EditText
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_logo"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/hint_login_username"
                android:inputType="phone"
                android:maxLength="11"
                android:paddingStart="5dp"
                android:paddingEnd="5dp" />

            <LinearLayout
                android:id="@+id/layout_smsCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_username"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_smsCode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="5"
                    android:hint="@string/hint_login_smsCode"
                    android:inputType="number"
                    android:maxLength="5"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp" />

                <Button
                    android:id="@+id/btn_getSmsCode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/login_getsms_btn" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_smsLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_smsCode"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="10dp"
                android:text="@string/login_btn" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>